feat: add exceptions